fix alignment of richtext placeholder

--- a/src/accordion-inner/editor.scss
+++ b/src/accordion-inner/editor.scss
@@ -9,6 +9,9 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		[data-rich-text-placeholder] {
+			width: 100%;
+		}
 		&::after {
 			content: "▶";
 			font-size: 0.25em;
